# auth-forum

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
auth_forum/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  forms.py  helpers.py  models.py  tasks.py  urls.py  views.py
auth_forum/cogs/: __init__.py  forum_cog.py
auth_forum/migrations/: 0001_initial.py  0002_bypass_board_restrictions_permission.py  0003_reactions_polls_subscriptions.py  0004_thread_prefix_postedit_boardsubscription.py
auth_forum/static/auth_forum/css/: forum-editor.css  forum.css
auth_forum/static/auth_forum/js/: forum.js  search.js
auth_forum/templates/auth_forum/: base.html  board.html  delete_board_confirm.html  delete_category_confirm.html  delete_post_confirm.html  edit_post.html  index.html  manage_board.html  manage_category.html  move_thread.html  new_thread.html  post_history.html  search.html  stats.html  thread.html
auth_forum/templates/auth_forum/partials/: dashboard_widget.html  poll.html  post_card.html  unread_badge.html
auth_forum/templatetags/: forum_tags.py
auth_forum/tests/: test_helpers.py  test_models.py  test_tasks.py  test_views.py
testauth/settings_aa3/: local.py
testauth/settings_aa4/: local.py
